Fixes cut text on smaller screens (hakol kore)

--- a/src/app/hakol-kore/hakol-kore.component.less
+++ b/src/app/hakol-kore/hakol-kore.component.less
@@ -15,10 +15,12 @@ budgetkey-container {
 
     .background-graphic {
         background-image: linear-gradient(57deg, #8b47a5, #5a32d1);
+        min-height: 730px;
     }
     .main-text {
         top: 0;
         height: 100vh;
+        min-height: 800px;
         h1 {
             font-weight: normal;
             max-width: 750px;
